# replication-sari-forecasting

./: .Rprofile  .gitignore  README.md  pyproject.toml  ruff.toml
code/: autocorrelation.ipynb  baseline_historical.ipynb  compute_ensemble.R  compute_forecasts.ipynb  compute_scores.ipynb  config.py  create_plots.py  diebold_mariano.ipynb  evaluation.ipynb  evaluation_quantiles.ipynb  functions_nowcasting.R  gridsearch_lightgbm.csv  gridsearch_tsmixer.csv  lightgbm.ipynb  lightgbm_no-covariates.ipynb  lightgbm_no-covid.ipynb  lightgbm_oracle.ipynb  lightgbm_skip.ipynb  lightgbm_uncorrected.ipynb  nowcasting.R  plot_ari.ipynb  plot_delays.ipynb  plot_forecasts.ipynb  plot_nowcasts.ipynb  plot_sari.ipynb  rga.ipynb  run_pipeline.py  train_models.ipynb  tsmixer.ipynb  tuning_lightgbm.ipynb  tuning_lightgbm_local.ipynb  tuning_tsmixer.ipynb  tuning_tsmixer_local.ipynb
code/src/: forecasting.py  hp_tuning_functions.py  load_data.py  load_reporting_triangle.py  plot_functions.py  r_utils.py  realtime_utils.py  scoring_functions.py  silence.py  training.py  tuning.py
forecasts/KIT-MeanEnsemble/: 2023-11-23-icosari-sari-KIT-MeanEnsemble.csv  2023-12-07-icosari-sari-KIT-MeanEnsemble.csv  2024-01-04-icosari-sari-KIT-MeanEnsemble.csv  2024-01-18-icosari-sari-KIT-MeanEnsemble.csv  2024-01-25-icosari-sari-KIT-MeanEnsemble.csv  2024-02-01-icosari-sari-KIT-MeanEnsemble.csv  2024-03-07-icosari-sari-KIT-MeanEnsemble.csv  (+13 more)
r/: .Rprofile  README.md  compute_ensemble.R
src/: load_data.py  plot_functions.py  realtime_utils.py  scoring_functions.py
(+2307 files in other folders)
