[project]
name = "replication-sari-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "darts>=0.36.0",
    "epiweeks>=2.3.0",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "lightgbm>=4.6.0",
    "papermill>=2.6.0",
    "plotnine>=0.15.0",
    "rich>=14.1.0",
    "scores>=2.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
